<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#fff"
    android:id="@+id/mp">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="144dp"
        android:layout_marginLeft="48dp"
        android:src="@drawable/sok"
        android:background="#fff"
        android:onClick="getNewFragment"
        android:layout_below="@+id/linearLayout"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_marginEnd="50dp"
        android:src="@drawable/kalender"
        android:background="#fff"
        android:layout_marginRight="48dp"
        android:layout_above="@+id/imageView4"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_marginTop="96dp"
        android:src="@drawable/biljett"
        android:layout_below="@+id/imageView2"
        android:background="#fff"
        android:layout_alignStart="@+id/imageView2"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/klocka"
        android:background="#fff"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="96dp"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/searchTxt"
        android:layout_below="@id/imageView"
        android:layout_marginLeft="34dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:id="@+id/calendarTxt"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <TextView
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        android:id="@+id/ticketTxt"
        android:layout_below="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3" />

    <TextView
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stationSearch"
        android:id="@+id/clockTxt"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/searchTxt" />

    <!--
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#ffd21200"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="13dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:id="@+id/title" />
    </LinearLayout>
    -->


</RelativeLayout>